# axum-db-benchmark

./: Cargo.toml  README.md  delete.lua  docker-compose.yml  get.lua  my_database.db  my_database.db-shm  post.lua  update.lua
data/: 000011.sst  000013.sst  IDENTITY  LOG  MANIFEST-000005
src/: config.rs  database.rs  err.rs  main.rs
src/databases/: mod.rs  mongodb.rs  mysql.rs  postgres.rs  redis.rs  sqlite.rs
