[package]
name = "diesel-sqlite-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
criterion = { version = "0.6", features = ["html_reports"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.30.0"
rusqlite = "0.36.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
