[package]
name = "diesel-sqlite-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

rand = "0.9.1"
uuid = { version = "1.17.0", features = ["v4"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
deadpool = "0.12.2"
